Fix overflow

--- a/src/components/Styles/Classes.scss
+++ b/src/components/Styles/Classes.scss
@@ -39,6 +39,21 @@ a:after {
 
 }
 
+@mixin floatUp {
+	@include desktop {
+		&:hover {
+		  transform:translateY(-10px);
+		}
+	}
+
+	@include mega {
+		&:hover {
+		  transform:translateY(-10px);
+		}
+	}
+
+}
+
 .text--tilted {
 	transform: rotate(-2deg);
 	transform-origin: left top 0;
@@ -88,12 +103,10 @@ a:after {
 	@include mega {
 		width:350px;
 		height:350px;
-		clip-path: circle(30% at center);
 	}
 	@include desktop {
 		width:300px;
 		height:300px;
-		//clip-path: circle(40% at center);
 	}
 	@include tablet {
 		width:350px;
